Add video overlay integration plan and update docs
Introduced PLAN.md and TASKS.md detailing the video overlay integration, calibration, and backend support. Updated freshstart.md to reference PLAN.md instead of ANIMATION_IMPLEMENTATION_PLAN.md. Modified example notebook to reflect new video overlay features.

--- a/examples/17_animation_with_overlays.ipynb
+++ b/examples/17_animation_with_overlays.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "simulate_pose",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ex2_code",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ex3_code",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ex4_code",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "ex5_code",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "ex6_code",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "ex7_napari",
    "metadata": {},
    "outputs": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "ex7_video",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.63it/s]\n"
+      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.66it/s]\n"
      ]
     },
     {
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ex7_html",
    "metadata": {},
    "outputs": [
@@ -994,7 +994,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding frames: 100%|██████████| 50/50 [00:01<00:00, 39.17it/s]"
+      "Encoding frames: 100%|██████████| 50/50 [00:01<00:00, 46.21it/s]"
      ]
     },
     {
@@ -1011,6 +1011,13 @@
      "output_type": "stream",
      "text": [
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-21 21:46:32.594 python[48582:489585835] IMKClient Stall detected, *please Report* your user scenario attaching a spindump (or sysdiagnose) that captures the problem - (imkxpc_bundleIdentifierWithReply:) block performed very slowly (1.10 secs).\n"
      ]
     }
    ],
@@ -1035,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "ex7_widget",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1057,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d3a84b0165642d68dc1affb6519c331",
+       "model_id": "9c0f6e6115bd4f13b37db33ad1aeffc4",
        "version_major": 2,
        "version_minor": 0
       },
