--- a/examples/16_field_animation.ipynb
+++ b/examples/16_field_animation.ipynb
@@ -307,6 +307,7 @@
     "        fps=10,\n",
     "        frame_labels=[f\"Trial {i + 1}\" for i in range(n_trials)],\n",
     "        title=\"Place Field Remapping\",\n",
+    "        scale_bar=True,  # Shows scale bar with units (env.units = \"cm\")\n",
     "    )\n",
     "\n",
     "    print(\"✓ Napari viewer opened\")\n",
@@ -472,6 +473,7 @@
     "        fps=10,\n",
     "        frame_labels=[f\"Trial {i + 1}\" for i in range(n_trials)],\n",
     "        title=\"Multi-Neuron Comparison\",\n",
+    "        scale_bar=True,  # Shows scale bar with units (env.units = \"cm\")\n",
     "    )\n",
     "\n",
     "    print(\"✓ Multi-field viewer opened!\")\n",
@@ -957,6 +959,7 @@
     "        backend=\"napari\",\n",
     "        fps=250,  # Match recording rate\n",
     "        title=\"Large Session Demo (1000 frames)\",\n",
+    "        scale_bar=True,  # Shows scale bar with units (env.units = \"cm\")\n",
     "        # cache_chunk_size=100,  # Auto-detected (default for >10K frames)\n",
     "    )\n",
     "    print(\"✓ Napari viewer opened!\")\n",
@@ -1196,7 +1199,7 @@
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
-   "display_name": "neurospatial",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
