Remove version tags from documentation and examples
Eliminated explicit version numbers (e.g., v0.3.0+, v0.1.0) from documentation, user guides, API references, and example files to simplify and modernize the docs. This improves clarity and reduces maintenance overhead as features are now assumed to be present without referencing specific versions.

--- a/docs/examples/06_composite_environments.ipynb
+++ b/docs/examples/06_composite_environments.ipynb
@@ -1143,7 +1143,7 @@
    "id": "bc460066",
    "metadata": {},
    "source": [
-    "## Example 4: New CompositeEnvironment Methods (v0.1.0)\n",
+    "## Example 4: New CompositeEnvironment Methods \n",
     "\n",
     "In v0.1.0, `CompositeEnvironment` gained full API parity with `Environment` class, including:\n",
     "- Region queries: `bins_in_region()`, `mask_for_region()`\n",
@@ -1490,7 +1490,7 @@
     "\n",
     "3. **`max_mnn_distance` parameter** controls which environments connect (None = no limit)\n",
     "\n",
-    "4. **Full API parity with Environment** (v0.1.0):\n",
+    "4. **Full API parity with Environment** :\n",
     "   - Spatial queries: `bin_at()`, `distance_between()`, `contains()`\n",
     "   - Region queries: `bins_in_region()`, `mask_for_region()`\n",
     "   - Pathfinding: `path_between()` (works across bridges!)\n",
