Update examples to use 'positions' argument
Replaces deprecated 'data_samples' argument with 'positions' in Environment.from_samples() across all example notebooks and scripts. Also updates exception handling in track linearization and improves notebook cell metadata for spacing. Adds new Python example scripts for spike field, differential operators, signal processing, boundary cell, trajectory analysis, simulation workflows, field animation, video overlay, real data bandit task, and Bayesian decoding.

--- a/docs/examples/03_morphological_operations.ipynb
+++ b/docs/examples/03_morphological_operations.ipynb
@@ -51,7 +51,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "c4",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -67,7 +69,9 @@
   {
    "cell_type": "markdown",
    "id": "c5",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Creating Realistic Sparse Data\n",
     "\n",
@@ -251,7 +255,7 @@
    "source": [
     "# Create environment with default settings\n",
     "env_default = Environment.from_samples(\n",
-    "    data_samples=sparse_data, bin_size=5.0, name=\"Default_Sparse\"\n",
+    "    positions=sparse_data, bin_size=5.0, name=\"Default_Sparse\"\n",
     ")\n",
     "\n",
     "print(env_default.info())"
@@ -396,7 +400,7 @@
    "source": [
     "# Create environment with dilation\n",
     "env_dilated = Environment.from_samples(\n",
-    "    data_samples=sparse_data,\n",
+    "    positions=sparse_data,\n",
     "    bin_size=5.0,\n",
     "    dilate=True,  # Enable dilation\n",
     "    name=\"Dilated\",\n",
@@ -497,7 +501,7 @@
    "source": [
     "# Create environment with hole filling\n",
     "env_filled = Environment.from_samples(\n",
-    "    data_samples=sparse_data,\n",
+    "    positions=sparse_data,\n",
     "    bin_size=5.0,\n",
     "    fill_holes=True,  # Enable hole filling\n",
     "    name=\"Filled\",\n",
@@ -555,7 +559,7 @@
    "source": [
     "# Create environment with gap closing\n",
     "env_closed = Environment.from_samples(\n",
-    "    data_samples=sparse_data,\n",
+    "    positions=sparse_data,\n",
     "    bin_size=5.0,\n",
     "    close_gaps=True,  # Enable closing\n",
     "    name=\"Closed\",\n",
@@ -611,7 +615,7 @@
    "source": [
     "# Combine all operations\n",
     "env_combined = Environment.from_samples(\n",
-    "    data_samples=sparse_data,\n",
+    "    positions=sparse_data,\n",
     "    bin_size=5.0,\n",
     "    dilate=True,\n",
     "    fill_holes=True,\n",
@@ -703,7 +707,7 @@
     "\n",
     "for thresh in thresholds:\n",
     "    env = Environment.from_samples(\n",
-    "        data_samples=sparse_data,\n",
+    "        positions=sparse_data,\n",
     "        bin_size=5.0,\n",
     "        bin_count_threshold=thresh,\n",
     "        name=f\"Threshold_{thresh}\",\n",
@@ -716,7 +720,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "c25",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -757,7 +763,9 @@
   {
    "cell_type": "markdown",
    "id": "c26",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Practical Example: Fixing a Real Analysis Pipeline\n",
     "\n",
@@ -962,7 +970,7 @@
    "source": [
     "# Create fixed environment\n",
     "env_fixed = Environment.from_samples(\n",
-    "    data_samples=sparse_data, bin_size=5.0, dilate=True, fill_holes=True, name=\"Fixed\"\n",
+    "    positions=sparse_data, bin_size=5.0, dilate=True, fill_holes=True, name=\"Fixed\"\n",
     ")\n",
     "\n",
     "print(f\"Fixed environment: {env_fixed.n_bins} bins\")\n",
@@ -1126,7 +1134,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "c36",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1140,7 +1150,7 @@
    "source": [
     "# Multiple rounds of dilation\n",
     "env_over_dilated = Environment.from_samples(\n",
-    "    data_samples=sparse_data, bin_size=5.0, dilate=True, name=\"OverDilated\"\n",
+    "    positions=sparse_data, bin_size=5.0, dilate=True, name=\"OverDilated\"\n",
     ")\n",
     "\n",
     "# Apply dilation multiple times manually (not recommended!)\n",
@@ -1168,7 +1178,9 @@
   {
    "cell_type": "markdown",
    "id": "c38",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "### Pitfall 3: Forgetting to check connectivity\n",
     "\n",
