--- a/docs/examples/05_track_linearization.ipynb
+++ b/docs/examples/05_track_linearization.ipynb
@@ -663,7 +663,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "e21",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -703,7 +705,9 @@
   {
    "cell_type": "markdown",
    "id": "e22",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Why Linearization Matters: Neural Analysis Example\n",
     "\n",
@@ -891,7 +895,7 @@
    "source": [
     "# Create 2D environment (wrong for this analysis!)\n",
     "env_2d = Environment.from_samples(\n",
-    "    data_samples=plus_maze_data, bin_size=8.0, name=\"PlusMaze2D\"\n",
+    "    positions=plus_maze_data, bin_size=8.0, name=\"PlusMaze2D\"\n",
     ")\n",
     "\n",
     "# Map to bins\n",
@@ -1222,7 +1226,7 @@
     "# ✗ WRONG - Don't call to_linear() on non-1D environments\n",
     "try:\n",
     "    linear = env_2d.to_linear(plus_maze_data[:10])\n",
-    "except AttributeError as e:\n",
+    "except TypeError as e:\n",
     "    print(f\"Error: {e}\")\n",
     "    print(\"\\nAlways check env.is_1d before calling to_linear()!\")\n",
     "\n",
