--- a/docs/examples/11_place_field_analysis.ipynb
+++ b/docs/examples/11_place_field_analysis.ipynb
@@ -277,7 +277,7 @@
     "    spike_times,\n",
     "    times,\n",
     "    positions,\n",
-    "    method=\"diffusion_kde\",  # Default: boundary-aware graph-based KDE\n",
+    "    smoothing_method=\"diffusion_kde\",  # Default: boundary-aware graph-based KDE\n",
     "    bandwidth=5.0,  # Spatial smoothing bandwidth (cm)\n",
     ")\n",
     "\n",
