--- a/docs/examples/18_video_overlay.ipynb
+++ b/docs/examples/18_video_overlay.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from neurospatial.animation._video_io import VideoReader\n",
+    "from neurospatial.animation._video_io import VideoReader  # noqa: E402\n",
     "\n",
     "print(\"Example 1: Inspecting Video Metadata\")\n",
     "print(\"=\" * 50)\n",
@@ -369,7 +369,52 @@
    "id": "landmarks_calibration",
    "metadata": {},
    "outputs": [],
-   "source": "print(\"Example 3: Landmark Calibration\")\nprint(\"=\" * 50)\n\n# Arena corners in video pixels\n# Assuming video shows arena with some margin\nlandmarks_px = np.array(\n    [\n        [10, 10],  # Top-left corner (pixel coords, origin top-left)\n        [310, 10],  # Top-right corner\n        [310, 230],  # Bottom-right corner\n        [10, 230],  # Bottom-left corner\n    ]\n)\n\n# Corresponding arena corners in environment coordinates\n# Environment origin is bottom-left, Y increases upward\nlandmarks_env = np.array(\n    [\n        [0, 100],  # Top-left (x=0, y=max)\n        [100, 100],  # Top-right (x=max, y=max)\n        [100, 0],  # Bottom-right (x=max, y=0)\n        [0, 0],  # Bottom-left (x=0, y=0)\n    ]\n)\n\nprint(\"Landmark correspondences:\")\nfor i, (px, cm) in enumerate(zip(landmarks_px, landmarks_env, strict=True)):\n    print(f\"  Point {i + 1}: pixel {px} -> env {cm} cm\")\n\n# Method 1: Using calibrate_from_landmarks directly\ntransform_lm = calibrate_from_landmarks(\n    landmarks_px=landmarks_px,\n    landmarks_cm=landmarks_env,\n    frame_size_px=(video_width, video_height),\n    kind=\"similarity\",  # or \"rigid\", \"affine\"\n)\n\ncalibration_landmarks = VideoCalibration(\n    transform_px_to_cm=transform_lm,\n    frame_size_px=(video_width, video_height),\n)\n\nprint(\"\\nCalibration created (similarity transform)\")\nprint(f\"  cm_per_px: {calibration_landmarks.cm_per_px:.4f}\")"
+   "source": [
+    "print(\"Example 3: Landmark Calibration\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Arena corners in video pixels\n",
+    "# Assuming video shows arena with some margin\n",
+    "landmarks_px = np.array(\n",
+    "    [\n",
+    "        [10, 10],  # Top-left corner (pixel coords, origin top-left)\n",
+    "        [310, 10],  # Top-right corner\n",
+    "        [310, 230],  # Bottom-right corner\n",
+    "        [10, 230],  # Bottom-left corner\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Corresponding arena corners in environment coordinates\n",
+    "# Environment origin is bottom-left, Y increases upward\n",
+    "landmarks_env = np.array(\n",
+    "    [\n",
+    "        [0, 100],  # Top-left (x=0, y=max)\n",
+    "        [100, 100],  # Top-right (x=max, y=max)\n",
+    "        [100, 0],  # Bottom-right (x=max, y=0)\n",
+    "        [0, 0],  # Bottom-left (x=0, y=0)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(\"Landmark correspondences:\")\n",
+    "for i, (px, cm) in enumerate(zip(landmarks_px, landmarks_env, strict=True)):\n",
+    "    print(f\"  Point {i + 1}: pixel {px} -> env {cm} cm\")\n",
+    "\n",
+    "# Method 1: Using calibrate_from_landmarks directly\n",
+    "transform_lm = calibrate_from_landmarks(\n",
+    "    landmarks_px=landmarks_px,\n",
+    "    landmarks_cm=landmarks_env,\n",
+    "    frame_size_px=(video_width, video_height),\n",
+    "    kind=\"similarity\",  # or \"rigid\", \"affine\"\n",
+    ")\n",
+    "\n",
+    "calibration_landmarks = VideoCalibration(\n",
+    "    transform_px_to_cm=transform_lm,\n",
+    "    frame_size_px=(video_width, video_height),\n",
+    ")\n",
+    "\n",
+    "print(\"\\nCalibration created (similarity transform)\")\n",
+    "print(f\"  cm_per_px: {calibration_landmarks.cm_per_px:.4f}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -698,7 +743,7 @@
     "            fps=10,\n",
     "        )\n",
     "        print(\"Widget created - use slider to navigate\")\n",
-    "        display(widget)\n",
+    "        display(widget)  # noqa: F821\n",
     "    else:\n",
     "        print(\"Not in Jupyter notebook environment\")\n",
     "\n",
@@ -734,7 +779,37 @@
    "id": "performance_tips",
    "metadata": {},
    "outputs": [],
-   "source": "from neurospatial.animation import subsample_frames\n\nprint(\"Example 7: Performance Optimization\")\nprint(\"=\" * 50)\n\n# Tip 1: Adjust cache size for your workflow\nreader_small_cache = VideoReader(video_path, cache_size=50)\nreader_large_cache = VideoReader(video_path, cache_size=200)\n\nprint(\"Tip 1: Adjust cache size\")\nprint(\"  cache_size=50: Low memory, good for random access\")\nprint(\"  cache_size=200: Higher memory, better for sequential playback\")\n\n# Tip 2: Downsample for faster rendering\nprint(\"\\nTip 2: Downsample for speed\")\noverlay_fast = VideoOverlay(\n    source=video_path,\n    calibration=calibration_landmarks,\n    downsample=2,  # Half resolution\n)\nprint(f\"  Original: {video_width}x{video_height} pixels\")\nprint(f\"  Downsampled: {video_width // 2}x{video_height // 2} pixels\")\n\n# Tip 3: Subsample frames for preview\nprint(\"\\nTip 3: Subsample frames for quick preview\")\n# Subsample from 30fps to 10fps\nfields_subsampled = subsample_frames(fields, source_fps=30, target_fps=10)\nprint(f\"  Original: {len(fields)} frames at 30fps\")\nprint(f\"  Subsampled: {len(fields_subsampled)} frames at 10fps\")"
+   "source": [
+    "from neurospatial.animation import subsample_frames  # noqa: E402\n",
+    "\n",
+    "print(\"Example 7: Performance Optimization\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Tip 1: Adjust cache size for your workflow\n",
+    "reader_small_cache = VideoReader(video_path, cache_size=50)\n",
+    "reader_large_cache = VideoReader(video_path, cache_size=200)\n",
+    "\n",
+    "print(\"Tip 1: Adjust cache size\")\n",
+    "print(\"  cache_size=50: Low memory, good for random access\")\n",
+    "print(\"  cache_size=200: Higher memory, better for sequential playback\")\n",
+    "\n",
+    "# Tip 2: Downsample for faster rendering\n",
+    "print(\"\\nTip 2: Downsample for speed\")\n",
+    "overlay_fast = VideoOverlay(\n",
+    "    source=video_path,\n",
+    "    calibration=calibration_landmarks,\n",
+    "    downsample=2,  # Half resolution\n",
+    ")\n",
+    "print(f\"  Original: {video_width}x{video_height} pixels\")\n",
+    "print(f\"  Downsampled: {video_width // 2}x{video_height // 2} pixels\")\n",
+    "\n",
+    "# Tip 3: Subsample frames for preview\n",
+    "print(\"\\nTip 3: Subsample frames for quick preview\")\n",
+    "# Subsample from 30fps to 10fps\n",
+    "fields_subsampled = subsample_frames(fields, source_fps=30, target_fps=10)\n",
+    "print(f\"  Original: {len(fields)} frames at 30fps\")\n",
+    "print(f\"  Subsampled: {len(fields_subsampled)} frames at 10fps\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -862,6 +937,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
