--- a/examples/08_spike_field_basics.ipynb
+++ b/examples/08_spike_field_basics.ipynb
@@ -471,7 +471,7 @@
     "    spike_times,\n",
     "    times,\n",
     "    positions,\n",
-    "    method=\"diffusion_kde\",  # Boundary-aware smoothing (recommended)\n",
+    "    smoothing_method=\"diffusion_kde\",  # Boundary-aware smoothing (recommended)\n",
     "    bandwidth=8.0,  # Smoothing bandwidth in cm\n",
     "    min_occupancy_seconds=0.5,  # Exclude bins with <0.5s occupancy\n",
     ")\n",
