--- a/examples/15_simulation_workflows.ipynb
+++ b/examples/15_simulation_workflows.ipynb
@@ -547,7 +547,7 @@
     "# Validate the open field session\n",
     "report = validate_simulation(\n",
     "    session=open_field,\n",
-    "    method=\"diffusion_kde\",  # Use boundary-aware place field detection\n",
+    "    smoothing_method=\"diffusion_kde\",  # Use boundary-aware place field detection\n",
     "    show_plots=False,  # Set to True to see diagnostic plots\n",
     ")\n",
     "\n",
