--- a/examples/17_animation_with_overlays.ipynb
+++ b/examples/17_animation_with_overlays.ipynb
@@ -222,6 +222,7 @@
     "    nodes=(\"nose\", \"body\", \"tail\"),\n",
     "    edges=((\"tail\", \"body\"), (\"body\", \"nose\")),\n",
     "    edge_color=\"white\",\n",
+    "    edge_width=2.0,\n",
     ")\n",
     "\n",
     "print(\"Pose: 3 keypoints (nose, body, tail)\")\n",
